PROJECT(ilearningWittystepbystep)
cmake_minimum_required(VERSION 2.8)
add_subdirectory(lesson-00-hello-world-in-cpp)
add_subdirectory(lesson-01-hello-world-in-wt)
add_subdirectory(lesson-02-events)
add_subdirectory(lesson-03-static-content)
add_subdirectory(lesson-04-links)
add_subdirectory(lesson-05-auth)
add_subdirectory(lesson-06-auth2)
add_subdirectory(lesson-07-rest-api)
# Tests
enable_testing()
